image not open  and some detail show

--- a/src/app/dealer/dealer-list/dealer-list.component.html
+++ b/src/app/dealer/dealer-list/dealer-list.component.html
@@ -82,15 +82,15 @@
                   <table>
                       <tr>
                           <td class="w30 text-center"><mat-checkbox name="select_all" [(ngModel)]="select_all" (change)="select_all_data()"></mat-checkbox></td>
-                          <th class="w30">&nbsp;</th>
+                          <th class="w50">&nbsp;</th>
                           <th class="w150">Date / Created By</th>
-                          <th class="w150">Company Name</th>
+                          <th class="w200">Company Name</th>
                           <th class="w150">Contact Person</th>
                           <th class="w100">Mobile</th>
                           <th class="w130">State</th>
                           <th class="w130">District</th>
                           <th class="w130 text-center">Company Point Transfer</th>
-                          <th class="w180 text-center">Assigned Sales User</th>
+                          <th class="w200 text-center">Assigned Sales User</th>
 
                           <th class="w150 text-center">
                             <div class="ml0">
@@ -102,7 +102,7 @@
                           </th>
                           <!-- <th class="w70 text-center">Requests</th> -->
                           <!-- <th class="w65 text-center">User Type</th> -->
-                          <th class="w100 text-center">Status</th>
+                          <th class="w150 text-center">Status</th>
                           <th class="w60 text-center">Action</th>
 
                       </tr>
@@ -113,7 +113,7 @@
                   <table>
                       <tr>
                           <th class="w30">&nbsp;</th>
-                          <th class="w30">&nbsp;</th>
+                          <th class="w50">&nbsp;</th>
                           <th class="w150">
                             <div class="date-form">
                                 <mat-form-field >
@@ -125,7 +125,7 @@
                                 </mat-form-field>
                             </div>
                           </th>     
-                          <th class="w150">
+                          <th class="w200">
                             <div class="search-form">
                                 <input type="text" placeholder="Company Name" [(ngModel)]="filter.search_company_name"  (keyup.enter)="current_page = 1;getDealerList('')">
                                 <i class="material-icons">search</i>
@@ -158,7 +158,7 @@
 
 
                           <th class="w130"></th>
-                          <th class="w180">
+                          <th class="w200">
                             <div class="search-form">
                                 <input type="text" placeholder="Sales user" [(ngModel)]="filter.full_name"  (keyup.enter)="current_page = 1;getDealerList('')">
                                 <i class="material-icons">search</i>
@@ -172,7 +172,7 @@
                           </th>
                           <!-- <th class="w70"></th> -->
                           <!-- <th class="w65"></th> -->
-                          <th class="w100">
+                          <th class="w150">
                             <div class="form-area">
                                 <div class="slect mr0">
                                     <mat-form-field>
@@ -196,13 +196,13 @@
           </div>
 
 
-          <div class="css-table" *ngIf="dealers.length">
-            <div class="table-container">
+          
+            <div class="table-container" *ngIf="dealers.length">
                 <div class="table-body">
                     <table>
                         <tr *ngFor="let val of dealers; let i = index">
                             <td class="w30 text-center" style="border-right: 0px !important;"><mat-checkbox name="checked" [(ngModel)]="val.checked" (change)="select_item($event,i)"></mat-checkbox></td>
-                            <td class="w30">{{ ( (current_page - 1 ) * 20 ) + ( i+1 ) }}</td>
+                            <td class="w50">{{ ( (current_page - 1 ) * 20 ) + ( i+1 ) }}</td>
                             <td class="w150">
                                   <ng-container *ngIf="val.date_created  != '0000-00-00 00:00:00' "> 
                                     {{val.date_created | date: 'dd MMM yyyy'}}
@@ -214,14 +214,14 @@
                                       {{val.created_by}}
                                   </ng-container>  
                               </td>
-                            <td class="w150"><a class="blue" routerLink="/dealer-detail/{{val.id}}/{{current_page}}" (click)="set_filter(filter)" routerLinkActive="active">{{val.company_name}}</a></td>
+                            <td class="w200"><a class="blue" routerLink="/dealer-detail/{{val.id}}/{{current_page}}" (click)="set_filter(filter)" routerLinkActive="active">{{val.company_name}}</a></td>
                             <td class="w150">{{val.first_name | titlecase }} {{val.last_name | titlecase }}</td>
                             <td class="w100">{{val.mobile_no}}</td>
                             <td class="w130">{{val.state | titlecase }}</td>
                             <td class="w130">{{val.district | titlecase }}</td>
       
                             <td class="w130 text-center"> {{val.total_company_points}}</td>
-                            <td class="w180 text-center">{{val.full_name}}</td>
+                            <td class="w200 text-center">{{val.full_name}}</td>
       
       
       
@@ -233,7 +233,7 @@
       
                             <!-- <td class="w65 text-center"><a class="blue" style="cursor: pointer;" (click)="changeType(2,  val.id, val.company_name, val.user_type)">Change</a></td> -->
       
-                            <td class="w100">
+                            <td class="w150">
                                 <div class="center">
                                     <select class="{{val.status}}"  [name]="'status'+i" placeholder="Status" [(ngModel)]="val.status" (change)="dealerStatus(i) ">
                                         <option class="Verified" value="Verified">Verified</option>
@@ -252,7 +252,7 @@
                     </table>
                 </div>
             </div>
-        </div>
+       
         
         <div class="container-outer">
             <div class="date-not" *ngIf="!loading_list && !dealers.length && ( (filter.status == 'All' && dealer_all ) || (filter.status == 'Pending' && dealer_pending ) || (filter.status == 'Verified' && dealer_verified ) || (filter.status == 'Reject' && dealer_reject ) || (filter.status == 'Suspect' && dealer_suspect )   )">
