--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -327,6 +327,10 @@
             </div>
         </div>
     </div>
+
+
+
+ 
     
                     <!-- <a class="" mat-button>Distributor</a> -->
 <!--     
@@ -357,6 +361,61 @@
     </div>
 </div>
 </div> -->
+</div>
+
+
+<div class="row mb15">
+    <div class="col s12">
+        
+        
+        
+        
+        <div class="pie-chart">
+            <div class="chart-header">
+                <p>Month Wise Registered Karigar </p>
+                <!-- <div class="sm-tab">
+                    <a class="" [ngClass]="{'active': show_carpenter_graph == true}"
+                    (click)="getmonthwisedetail('1')" mat-button>Carpenter</a>
+                    <a class="" [ngClass]="{'active': show_masons_graph == true}"
+                    (click)="getmonthwisedetail('2')" mat-button>Masons</a>
+                    <a class="" [ngClass]="{'active': show_fabricator_graph == true}"
+                    (click)="getmonthwisedetail('3')" mat-button>Fabricator</a>
+                    <a class="" [ngClass]="{'active': show_architect_graph == true}"
+                    (click)="getmonthwisedetail('4')" mat-button>Architect</a>
+                    
+                </div> -->
+
+                <div class="sm-tab">
+                    <a class="" [ngClass]="{'active': show_carpenter_graph == true}"  (click)="getmonthwisedetail(1)" mat-button>Carpenter</a>
+                    <a class="" [ngClass]="{'active': show_masons_graph == true}"  (click)="getmonthwisedetail(2)" mat-button>Masons</a>
+                    <a class="" [ngClass]="{'active': show_fabricator_graph == true}" (click)="getmonthwisedetail(3)" mat-button>Fabricator</a>
+                    <a class="" [ngClass]="{'active': show_architect_graph == true}" (click)="getmonthwisedetail(4)" mat-button>Architect</a>
+
+                </div>
+            </div>
+            <div class="chart" *ngIf="show_carpenter_graph">
+                <fusioncharts type="spline" width="100%" height="350" [dataSource]="karigar_month_source">
+                </fusioncharts>
+            </div>
+            <div class="chart" *ngIf="show_masons_graph">
+                <fusioncharts type="spline" width="100%" height="350" [dataSource]="karigar_month_source">
+                </fusioncharts>
+            </div>
+            <div class="chart" *ngIf="show_fabricator_graph">
+                <fusioncharts type="spline" width="100%" height="350" [dataSource]="karigar_month_source">
+                </fusioncharts>
+            </div>
+            <div class="chart" *ngIf="show_architect_graph">
+                <fusioncharts type="spline" width="100%" height="350" [dataSource]="karigar_month_source">
+                </fusioncharts>
+            </div>
+        </div>
+        
+        
+        
+        
+        
+    </div>
 </div>
 
 <div class="row mb15">
