--- a/src/app/site-detail/site-detail.component.html
+++ b/src/app/site-detail/site-detail.component.html
@@ -181,7 +181,7 @@
           <div class="uploade-image">
             <ul>
               <li *ngFor="let row of siteImages; let i=index">
-                <img src="{{uploadurl+row.image_name}}"  style="cursor: zoom-in;" (click)="openDialog( row, row.image_name,'image')" >
+                <img src="{{uploadurl+row.image_name}}"  style="cursor: zoom-in;" (click)="openDialog( row,row.image_name)" >
                 <p class="fix-date">{{row.date_created | date: 'MMM d, y, h:mm:ss a' }}</p>
               </li>
             </ul>
