--- a/src/styles.scss
+++ b/src/styles.scss
@@ -330,6 +330,11 @@ h1, h2, h3, h4, h5, h6
 
 
 
+$blue:#1600E1;
+$red:#ED3237;
+$green:#158700;
+$twhite:#fff; 
+
 .dashboard
 {
     padding: 15px;
@@ -3570,7 +3575,7 @@ header
     .sticky-header
     {
         
-        border-bottom: solid 1px var(--light);
+        border-bottom: solid 1px #d2d2d2;
         
         
         
@@ -3619,9 +3624,9 @@ header
                                 padding: 0px 11px;
                                 border-radius: 18px;
                                 height: 22px;
-                                background: var(--white);
+                                background: #fff;
                                 width: 100%;
-                                margin-right: 10px;
+                                margin-right: 0px;
                                 
                                 .mat-form-field
                                 {
@@ -3666,7 +3671,7 @@ header
                                                             .mat-select-arrow
                                                             {
                                                                 margin: 7px 0px;
-                                                                color: var(--black);
+                                                                color: #000;
                                                             }
                                                         }
                                                     }
@@ -3696,7 +3701,7 @@ header
                                             
                                             .mat-datepicker-toggle
                                             {
-                                                color: var(--success);
+                                                color: $green;
                                             }
                                         }
                                         
@@ -3708,7 +3713,7 @@ header
                             {
                                 &.go
                                 {
-                                    background: var(--success);
+                                    background: $green;
                                     display: flex;
                                     align-items: center;
                                     height: 22px;
@@ -3721,7 +3726,7 @@ header
                                 
                                 span
                                 {
-                                    color: var(--white);
+                                    color: #fff;
                                     font-size: 12px;
                                 }
                             }
@@ -3744,7 +3749,7 @@ header
                             &:first-child
                             {
                                 
-                                border-right: 1px solid var(--light) !important;
+                                border-right: 1px solid #D2D2D2 !important;
                             }
                             
                             &:last-child
@@ -3776,10 +3781,10 @@ header
         .table-body
         {
             
-            background: var(--white);
+            background: #fff;
             border-radius: 6px;
             box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
-            border: solid 1px var(--light)d2;
+            border: solid 1px #d2d2d2d2;
             
             
             
@@ -3789,8 +3794,8 @@ header
                 {
                     td
                     {
-                        border-right: 1px solid var(--light);
-                        border-bottom: 1px solid var(--light);
+                        border-right: 1px solid #D2D2D2 !important;
+                        border-bottom: 1px solid #D2D2D2;
                         font-size: 12px;
                         padding: 5px;
                         position: relative;
@@ -3807,21 +3812,12 @@ header
                             
                         }
                         
-                        
                         img
                         {
                             width: 25px;
                             height: 25px;
                             cursor:zoom-in;
                             border-radius: 100px;
-                            
-                            &.upi-img{
-                                width: 60px;
-                                height: 25px;
-                                border-radius: 0px;
-                                margin: 0 auto;
-                                cursor: inherit;
-                            }
                         }
                         
                         .action-btns
@@ -3854,7 +3850,7 @@ header
                                     
                                     i
                                     {
-                                        color: var(--white);
+                                        color: #fff;
                                         font-size: 12px;
                                         position: absolute;
                                         top: 7px;
@@ -3868,7 +3864,7 @@ header
                                     p
                                     {
                                         padding-left: 24px;
-                                        color: var(--danger);
+                                        color: $red;
                                     }
                                 }
                                 
@@ -3878,7 +3874,7 @@ header
                                 }
                                 &.delete
                                 {
-                                    background:var(--danger);
+                                    background:$red;
                                 }
                                 
                             }
@@ -3911,14 +3907,14 @@ header
                         
                         &.active
                         {
-                            color: var(--success);
+                            color: $green;
                         } 
                         
                         .over-sec
                         {
                             i
                             {
-                                background: green;
+                                background: red;
                                 position: absolute;
                                 top: 0;
                                 width: 26px;
@@ -3928,7 +3924,7 @@ header
                                 align-items: center;
                                 justify-content: center;
                                 font-size: 18px;
-                                color: var(--white) !important;
+                                color: #fff !important;
                                 transition: 0.5s;
                                 transform: scale(0);
                                 cursor: pointer;
@@ -3941,8 +3937,8 @@ header
                                 i
                                 {
                                     
-                                    width: 34px !important;
-                                    height: 100% !important;
+                                    width: 30px !important;
+                                    height: 30px !important;
                                     
                                 }
                             }
@@ -4015,7 +4011,7 @@ header
                             &:first-child
                             {
                                 
-                                border-right: 1px solid var(--light) !important;
+                                border-right: 1px solid #D2D2D2 !important;
                             }
                             
                             &:last-child
@@ -4053,13 +4049,13 @@ header
                 
                 p
                 {
-                    color:var(--white);
+                    color:#fff;
                     font-size: 13px;
                 }
                 
                 i
                 {
-                    color: var(--white);
+                    color: #fff;
                     font-size: 18px;
                     position: absolute;
                     right: 12px;
@@ -4068,17 +4064,6 @@ header
             }
         } 
     }
-      //vishal 
-    &.hr-scroll-table{
-        height: calc(100vh - 210px);
-        overflow: auto;
-        
-        .sticky-header, .table-container{
-            width: min-content;
-        }
-    }
-      //vishal 
-
     
     &.scroll-table
     {
@@ -4094,6 +4079,22 @@ header
             top: 0;
             left: 0;
             z-index: 3;
+        }
+    }
+    
+    &.hr-scroll-table{
+        height: calc(100vh - 195px);
+        overflow: auto;
+        
+        .sticky-header{
+            position: sticky;
+            top: 0;
+            left: 0;
+            z-index: 2;
+        }
+        
+        .sticky-header, .table-container{
+            width: min-content;
         }
     }
 }
