add graph on dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -365,31 +365,15 @@
 
 
 <div class="row mb15">
-    <div class="col s12">
-        
-        
-        
-        
+    <div class="col s12">  
         <div class="pie-chart">
             <div class="chart-header">
                 <p>Month Wise Registered Karigar </p>
-                <!-- <div class="sm-tab">
-                    <a class="" [ngClass]="{'active': show_carpenter_graph == true}"
-                    (click)="getmonthwisedetail('1')" mat-button>Carpenter</a>
-                    <a class="" [ngClass]="{'active': show_masons_graph == true}"
-                    (click)="getmonthwisedetail('2')" mat-button>Masons</a>
-                    <a class="" [ngClass]="{'active': show_fabricator_graph == true}"
-                    (click)="getmonthwisedetail('3')" mat-button>Fabricator</a>
-                    <a class="" [ngClass]="{'active': show_architect_graph == true}"
-                    (click)="getmonthwisedetail('4')" mat-button>Architect</a>
-                    
-                </div> -->
-
                 <div class="sm-tab">
-                    <a class="" [ngClass]="{'active': show_carpenter_graph == true}"  (click)="getmonthwisedetail(1)" mat-button>Carpenter</a>
-                    <a class="" [ngClass]="{'active': show_masons_graph == true}"  (click)="getmonthwisedetail(2)" mat-button>Masons</a>
-                    <a class="" [ngClass]="{'active': show_fabricator_graph == true}" (click)="getmonthwisedetail(3)" mat-button>Fabricator</a>
-                    <a class="" [ngClass]="{'active': show_architect_graph == true}" (click)="getmonthwisedetail(4)" mat-button>Architect</a>
+                    <a class="" [ngClass]="{'active': show_carpenter_graph == true}"  (click)="getRegistratonkarigar(1)" mat-button>Carpenter</a>
+                    <a class="" [ngClass]="{'active': show_masons_graph == true}"  (click)="getRegistratonkarigar(2)" mat-button>Masons</a>
+                    <a class="" [ngClass]="{'active': show_fabricator_graph == true}" (click)="getRegistratonkarigar(3)" mat-button>Fabricator</a>
+                    <a class="" [ngClass]="{'active': show_architect_graph == true}" (click)="getRegistratonkarigar(4)" mat-button>Architect</a>
 
                 </div>
             </div>
