--- a/src/app/system-user-add/system-user-add.component.html
+++ b/src/app/system-user-add/system-user-add.component.html
@@ -29,7 +29,7 @@
             <div class="option-field">
               <div class="control-field">
                 <mat-form-field class="cs-input">
-                  <input matInput placeholder="Create Password" name="password" (keypress)="numeric_Number($event)"
+                  <input matInput placeholder="Create Password" name="visible_password" (keypress)="numeric_Number($event)"
                  [(ngModel)]="userForm.visible_password" #visible_password="ngModel" required>
                 </mat-form-field>
               </div>
