--- a/src/app/system-user-list/system-user-list.component.html
+++ b/src/app/system-user-list/system-user-list.component.html
@@ -90,7 +90,7 @@
                           </td>
                           <td class="w140">{{val.first_name |titlecase}}</td>
                           <td class="w100">{{val.phone |titlecase}}</td>
-                          <td>{{val.email |titlecase}}</td>
+                          <td>{{val.email }}</td>
                           <td class="w110">{{val.visible_password}}</td>
 
                           <td class="w80 text-center">
